# perceptor

./: .gitignore  Dockerfile  README.md  config.docker.yaml  pyproject.toml
pcr/: perceptor.py
pcr/codewriter/: __init__.py  codelib.py  cpp.py  cpp_dropper.py  cpp_injector.py  scriptblocksmuggling.py  sql_assembly.py
pcr/codewriter/ASMCode/: syscaller.S
pcr/codewriter/CPPCode/: CPPCode.jinja
pcr/codewriter/CPPCode/blocks/: alloc.jinja  alloc_basic.jinja  alloc_basic_remote.jinja  alloc_basic_syscalls.jinja  alloc_basic_syscalls_remote.jinja  alloc_sections.jinja  alloc_sections_remote.jinja  alloc_sections_syscalls.jinja  alloc_sections_syscalls_remote.jinja  clean.jinja  common_definitions.jinja  decoders.jinja  delay_basic.jinja  get_process_handle.jinja  get_process_handle_early_bird.jinja  macros.jinja  mockingjay.jinja  payload.jinja  payload_data.jinja  payload_remote.jinja  payload_text.jinja  prepare_syscalls.jinja  starter.jinja  starter_dropper.jinja  starter_injector_apc.jinja  starter_injector_apc_syscalls.jinja  starter_injector_basic.jinja  starter_injector_basic_syscalls.jinja  starter_injector_thread_context.jinja  starter_injector_thread_context_syscalls.jinja
pcr/codewriter/CPPCode/blocks/lib/: find_process.cpp  function_resolve.cpp  pe.cpp  remote_download.jinja  sections.jinja  sections_syscalls.jinja  syscalls.jinja
pcr/codewriter/CPPCode/decoders/: XOREncode.jinja
pcr/codewriter/CPPCode/lib/: find_thread.cpp  function_resolve.cpp  pe.cpp  sections.jinja
pcr/codewriter/CSHARPCode/: sql_assembly.jinja
pcr/codewriter/CSHARPCode/blocks/: sql_asm_assembly.jinja  sql_asm_cmd_exec.jinja  sql_asm_download.jinja  sql_asm_info.jinja
pcr/codewriter/PSCode/: ScriptBlockSmuggling.jinja
pcr/codewriter/blocks/cpp/: __init__.py  cpp_alloc.py  cpp_alloc_remote.py  cpp_clean.py  cpp_delay.py  cpp_drop.py  cpp_exec_remote.py  cpp_get_proc_handle.py  cpp_mockingjay.py  cpp_prepare_syscalls.py
pcr/codewriter/blocks/csharp/: __init__.py  sql_asm_assembly.py  sql_asm_cmd_exec.py  sql_asm_download.py  sql_asm_info.py
pcr/compiler/: LLVMPass.py  __init__.py
pcr/converter/: Donut.py  __init__.py
pcr/data/: empty_manifest.xml  empty_version.rc
pcr/extractor/: PExtractor.py  __init__.py
pcr/hiver/: MetadataDB.py  __init__.py
pcr/lib/: artifact.py  chain.py  common.py  jinja_helpers.py  link.py  misc_links.py
pcr/modifier/: CreateThreadStub.py  Manifestor.py  MvidInjector.py  PSCommentRemoval.py  RNDOpcodes.py  ResourceCarver.py  ResourceStealer.py  ShellcodeMutator.py  StringReplace.py  StudioRandomizer.py  XOREncode.py  __init__.py
pcr/signer/: CarbonCopy.py  SigThief.py  __init__.py
prebuilts/: carve.yaml  donut.yaml  donut_obfuscate.yaml  metadatadb.yaml  pscomments.yaml  scriptblocksmuggling.yaml
