[tool.poetry]
name = "perceptor"
version = "0.1.0"
description = ""
authors = ["Veids <veidsme@gmail.com>"]
readme = "README.md"
include = [
  "pcr/*"
]
packages=[
  { include = "pcr" }
]

[tool.poetry.scripts]
perceptor = "pcr.perceptor:main"
pcr = "pcr.perceptor:main"

[tool.poetry.dependencies]
python = "^3.11"
jsonschema = "^4.17.3"
rich = "^13.4.2"
lief = "^0.13.2"
keystone-engine = "^0.9.2"
jinja2 = "^3.1.2"
pycryptodome = "^3.18.0"
pyopenssl = "^23.2.0"
wand = "^0.6.11"
ruamel-yaml = "^0.17.32"
pydantic = "^2.1.1"
xmltodict = "^0.13.0"
peewee = "^3.16.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.9.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
