[project]
name = "perceptor"
version = "0.3.0"
description = ""
authors = [{ name = "Veids", email = "veidsme@gmail.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "rich>=14.2.0,<15",
    "lief>=0.17.1,<0.18",
    "keystone-engine>=0.9.2,<0.10",
    "jinja2>=3.1.4,<4",
    "pycryptodome>=3.18.0,<4",
    "pyopenssl>=25.3.0,<26",
    "wand>=0.6.11,<0.7",
    "ruamel-yaml>=0.18.17,<0.19",
    "pydantic>=2.7.1,<3",
    "xmltodict>=1.0.2,<2",
    "peewee>=3.16.3,<4",
    "faker>=40.1.0,<41",
    "pythonnet>=3.0.2,<4",
    "coffipy",
    "furikuripy",
]

[project.scripts]
perceptor = "pcr.perceptor:main"
pcr = "pcr.perceptor:main"

[dependency-groups]
dev = [
    "ipython>=9.8.0,<10",
    "flake8>=7.3.0,<8",
    "flake8-bugbear>=25.11.29,<26",
]

[tool.uv]

[tool.uv.sources]
coffipy = { git = "https://github.com/Veids/COFFI", rev = "coffipy" }
furikuripy = { git = "https://github.com/Veids/furikuripy" }

[tool.hatch.build.targets.sdist]
include = [
    "pcr",
    "pcr/*",
]

[tool.hatch.build.targets.wheel]
include = [
    "pcr",
    "pcr/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
